fix align elements

--- a/Cadastro/Acadastro/style.css
+++ b/Cadastro/Acadastro/style.css
@@ -12,7 +12,6 @@
 
 body{
     background-color: #1C1C26;
-    overflow: hidden;
 }
 .img-background2{
     position: fixed;
@@ -25,7 +24,7 @@ body{
 }
 #box{
     display: flex;
-    position: relative;
+    position: fixed;
     justify-content: center;
     align-items: center;
     background-color: #f19408;
@@ -42,14 +41,14 @@ body{
     z-index: 50;
 }
 #menu-popup{
-    position: absolute;
-    margin-top: 20px;
+    position: fixed;
+    margin-top: 77px;
     margin-left: 20px;
     width: 30px;
     z-index: 1500;
 }
 .barra-lateral{
-    position: relative;
+    position: fixed;
     max-width: 17vw;
     min-width: 300px;
     min-height: 400px;
@@ -59,7 +58,7 @@ body{
     border: solid 1px #868383a1;
     backdrop-filter: blur(1.35rem);
     margin-left: -350px;
-    margin-top: 0px;
+    margin-top: 59px;
     border-top-style: none;
     border-left-style: none;
     border-bottom-right-radius: 10px;
@@ -139,6 +138,8 @@ body{
     display: flex;
     justify-content: center;
     width: 95vw;
+    height: 150vh;
+    margin-top: 27em;
     background-color: #FFFFFF0F;
     border: solid 1px #FFFFFF17;
     backdrop-filter: blur(0.5rem);
@@ -160,26 +161,19 @@ body{
     color:#FFFFFF;
     z-index: 900;
 }
-.align-context{
-    display: flex;
-    /* flex-direction: row; */
-}
 .box-align-input, .align-date{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    position: absolute;
-    width: 64%;
-    margin-top: 136px;
-    max-width:60%;
-    height: 60px;
+    margin-top: 55px;
+    height: 55px;
+}
+.align-input{
+    display: flex;
+    justify-content: start;
 }
 .cpf-id {
-    position: absolute;
     font-family: 'Inter', sans-serif;
     font-size: 0.9em;
-    padding-left: calc(0.4rem + 0.40rem);
     letter-spacing: 0.2rem;
     background-color: #e0080800;
     border-bottom: solid 2px rgb(189, 186, 186);
@@ -189,9 +183,9 @@ body{
     color: #ffffff;
     text-transform: uppercase;
     outline: 0;
-    width: 12rem;
+    width: 10rem;
     height: 60%;
-    /* z-index: 950; */
+    z-index: 5;
 }
 .error-cpf {
     border-bottom: solid 2px rgb(184, 1, 1);
@@ -199,7 +193,7 @@ body{
 }
 #verific {
     position: absolute;
-    margin-left: 176px;
+    margin-left: 160px;
     margin-top: 8px;
     width: 16px;
     display: none;
@@ -207,7 +201,7 @@ body{
 }
 #error-detect{
     position: absolute;
-    margin-left: 176px;
+    margin-left: 160px;
     margin-top: 8px;
     width: 18px;
     display: none;
@@ -217,7 +211,7 @@ body{
     position: relative;
     font-family: 'Inter', sans-serif;
     transform: scale(0.7);
-    margin-left: calc(0.4rem + 0.40rem);
+    margin-left: calc(0.4rem + 0.4rem);
     margin-top: 6px;
     letter-spacing: 0.2rem;
     font-weight: 600;
@@ -261,14 +255,11 @@ body{
 }
 .align-date{
     display: flex;
-    position: absolute;
-    /* flex-direction: column; */
+    justify-content: end;
 }
 .happyBirthday {
-    position: absolute;
     font-family: 'Inter', sans-serif;
     font-size: 0.9em;
-    padding-left: calc(0.4rem + 0.50rem);
     letter-spacing: 0.2rem;
     background-color: #e0080800;
     border-bottom: solid 2px rgb(189, 186, 186);
@@ -278,16 +269,17 @@ body{
     color: #ffffff;
     text-transform: uppercase;
     outline: 0;
-    width: 8rem;
-    height: 60%;
-    /* z-index: 951; */
+    width: 6.5rem;
+    height: 35px;
+    margin-top: -56px;
+    margin-left: 34px;
+    z-index: 30;
 }
 .label-born{
-    position: relative;
+    position: absolute;
     font-family: 'Inter', sans-serif;
     transform: scale(0.7);
-    margin-left: calc(0.7rem + -0.9rem);
-    margin-top: 5px;
+    margin-top: -44px;
     letter-spacing: 0.2rem;
     font-weight: 600;
     color: rgb(189, 186, 186);
@@ -296,22 +288,17 @@ body{
 }
 @keyframes animateClickOutBorn {
     0%{
-        margin-top: -27px;
         transform: scale(0.5);
-        margin-left: calc(0.7rem + -1.6rem);
     } 50%{
         transform: scale(0.6);
-        margin-left: calc(0.7rem + -1.6rem);
     } 100%{
-        margin-top: 6px;
         transform: scale(0.7);
-        margin-left: calc(0.7rem + -0.9rem);
     }
 }
 .label-born__islater{
-    position: relative;
+    position: absolute;
     font-family: 'Inter', sans-serif;
-    margin-top: -27px;
+    margin-top: -66px;
     transform: scale(0.5);
     letter-spacing: 0.2rem;
     font-weight: 600;
@@ -321,18 +308,13 @@ body{
 }
 @keyframes animateClickBorn {
     0%{
-        margin-top: 6px;
         transform: scale(0.7);
         color: rgb(189, 186, 186);
-        margin-left: calc(0.7rem + -0.9rem);
     } 50%{
         transform: scale(0.6);
         color: rgb(189, 186, 186);
-        margin-left: calc(0.7rem + -0.9rem);
     } 100%{
-        margin-top: -27px;
         transform: scale(0.5);
-        margin-left: calc(0.7rem + -1.6rem);
     }
 }
 
